--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Hello World</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <title>Treasure Hunt Landing Page</title>
 </head>
 <body>
-Hello
+<header id="header">
+        <h1 id="title">Treasure Hunt</h1>
+        <p>Project Treasure Hunt is a mobile game app that allows users to participate in a virtual treasure hunt. The app will present users with a series of questions, and the goal of the game is to answer each
+                question correctly in order to progress to the next one.</p>
+</header>
+<main id="main-content">
+        <h2 id="welcome-message">Welcome to the Treasure Hunt!</h2>
+        <p id="description">Join us for an exciting adventure as we search for hidden treasures!</p>
+        <button id="Login">Login</button><br><br>
+        <button id="registration-button">Registration</button><br><br>
+        <button id="about-button">About</button>
+</main>
+<footer id="footer">
+        <p id="copyright">Copyright &copy; Treasure Hunt 2023</p>
+</footer>
 </body>
 </html>
