--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>About Page</title>
-  <link rel="stylesheet" href="about.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 <a class="twitter-timeline" href="https://twitter.com/treasure_ads?ref_src=twsrc%5Etfw">Tweets by treasure_ads</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
