--- a/about.html
+++ b/about.html
@@ -7,9 +7,15 @@
 </head>
 <body>
 <a class="twitter-timeline" href="https://twitter.com/treasure_ads?ref_src=twsrc%5Etfw">Tweets by treasure_ads</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-<h1>Names of the makers</h1>
-<p>Theodoulos Kappellos</p>
-<p>Loizos Gaitanou</p>
-<p>NDuka Batholomew</p>
+
+
+<footer>
+    <h1 id="Names">Names of the makers</h1>
+    <p class="Names">Theodoulos Kappellos</p>
+    <p class="Names">Loizos Gaitanou</p>
+    <p class="Names">NDuka Batholomew</p>
+    <img class="Logo" src="" width="100" height="100">
+</footer>
+
 </body>
 </html>
