Added code to the challenge page

--- a/src/challenges.html
+++ b/src/challenges.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-
+    <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="99" height="99">
 </header>
+
 <ul id="challengeList"></ul>
 <script src="fetchList.js"></script>
 </body>
-</html>
