--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
         <h1 id="title">Treasure Hunt</h1>
         <p>Project Treasure Hunt is a mobile game app that allows users to participate in a virtual treasure hunt. The app will present users with a series of questions, and the goal of the game is to answer each
                 question correctly in order to progress to the next one.</p>
-        Nicos Nicos
+
 </header>
 <main id="main-content">
         <h2 id="welcome-message">Welcome to the Treasure Hunt!</h2>
-        <p id="description">Join us for an exciting adventure as we search for hidden treasures!</p>
-        <button id="Login">Login</button><br><br>
-        <button id="registration-button">Registration</button><br><br>
+        <p id="description">Join us for an exciting adventure as we search for hidden treasures!</p><br><br>
+        <button onclick="Start()">START GAME</button><br><br>
         <button id="about-button">About</button>
 </main>
 <footer id="footer">
