--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
     <p class="Names">Theodoulos Kappellos</p>
     <p class="Names">Loizos Gaitanou</p>
     <p class="Names">NDuka Batholomew</p>
-    <img class="Logo" src="" width="100" height="100">
+    <img class="Logo" src="08_02_2023%2021_04_38.jpg" width="100" height="100">
 </footer>
 
 </body>
