--- a/src/challenges.html
+++ b/src/challenges.html
@@ -2,14 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
-    <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="99" height="99">
+    <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
 </header>
-
+<div id="enterName">
+<h1 id="title">I am known as...</h1>
+    <p id="explanation">(Enter your name)</p>
+    <form>
+        <label for="name"></label><br>
+        <input style="margin-top: 50px; margin-bottom: 180px;" type="text" id="name" name="name"><br>
+        <input type="submit" value="Submit" onclick="RemoveElement()">
+    </form>
+</div>
 <ul id="challengeList"></ul>
 <script src="fetchList.js"></script>
 </body>
