--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 <header>
     <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
 </header>
-<div id="enterName">
+<!--<div id="enterName">
 <h1 id="title">I am known as...</h1>
     <p id="explanation">(Enter your name)</p>
     <form>
@@ -18,7 +18,8 @@
         <input style="margin-top: 50px; margin-bottom: 180px;" type="text" id="name" name="name"><br>
         <input type="submit" value="Submit" onclick="RemoveElement()">
     </form>
-</div>
+</div>-->
 <ul id="challengeList"></ul>
-<script src="fetchList.js"></script>
+<script src="TH-script.js"></script>
 </body>
+</html>
