Started the javascript side of the TH by renaming some files and creating a new page for the user to enter their name

--- a/src/app.html
+++ b/src/app.html
@@ -9,16 +9,15 @@
 <body>
 <header>
     <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
+    <div id="loader"></div>
+    <a href="app.html" id="reload"><b>RELOAD</b></a>
 </header>
-<!--<div id="enterName">
-<h1 id="title">I am known as...</h1>
-    <p id="explanation">(Enter your name)</p>
-    <form>
-        <label for="name"></label><br>
-        <input style="margin-top: 50px; margin-bottom: 180px;" type="text" id="name" name="name"><br>
-        <input type="submit" value="Submit" onclick="RemoveElement()">
-    </form>
-</div>-->
+<h1>Available Treasure Hunts:</h1>
+<h3>Chose a treasure hunt and start! In a treasure hunt you will need to answer questions to rack up points!
+    Do not worry about the difficulty. Some questions will have hints and some will be skippable as well, but you will
+    lose points if you do that. Keep also in mind that you will have a limited amount of time to complete the Hunt. At the end,
+    you will be ranked against other teams, so aim for a high score! Now, Onwards, to Victory!</h3>
+<ul id="errorList"></ul>
 <ul id="challengeList"></ul>
 <script src="TH-script.js"></script>
 </body>
