--- a/src/name.html
+++ b/src/name.html
@@ -10,7 +10,7 @@
 <div id="enterName">
 <h1 id="title">I am known as...</h1>
     <p id="explanation">(Enter your name)</p>
-    <form>
+    <form method="GET" action="app.html">
         <label for="name"></label><br>
         <input style="margin-top: 50px; margin-bottom: 180px;" type="text" id="name" name="name"><br>
         <input type="submit" value="Submit" onclick="RemoveElement()">
