--- a/src/name.html
+++ b/src/name.html
@@ -13,7 +13,7 @@
     <form method="GET" action="app.html">
         <label for="name"></label><br>
         <input style="margin-top: 50px; margin-bottom: 180px;" type="text" id="name" name="name"><br>
-        <input type="submit" value="Submit" onclick="RemoveElement()">
+        <input type="submit" value="Submit">
     </form>
 </div>
 <script src="TH-script.js"></script>
