Started the javascript side of the TH by renaming some files and creating a new page for the user to enter their name

--- a/src/session.html
+++ b/src/session.html
@@ -10,8 +10,12 @@
 <header>
     <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
 </header>
-
-
+<div id="boolean"></div>
+<div id="integer"></div>
+<div id="numeric"></div>
+<div id="MCQ"></div>
+<div id="text"></div>
+<div id="skipButton" onclick="skipQuestion()">Skip</div>
 <script src="TH-script.js"></script>
 </body>
 </html>
