--- a/src/app.html
+++ b/src/app.html
@@ -11,6 +11,7 @@
     <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
     <div id="loader"></div>
     <a href="name.html" id="back"><b>BACK</b></a>
+    <a href="app.html" id="reload"><b>RELOAD</b></a>
 </header>
 <h1>Available Treasure Hunts:</h1>
 <h3>Chose a treasure hunt and start! In a treasure hunt you will need to answer questions to rack up points!
