--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
 <main id="main-content">
         <h2 id="welcome-message">Welcome to the Treasure Hunt!</h2>
         <p id="description">Join us for an exciting adventure as we search for hidden treasures!</p><br><br>
-        <button onclick="Start()">START GAME</button><br><br>
-        <button id="about-button">About</button>
+
+      <a id="Start" href="src/name.html">START THE HUNT</a>
+
 </main>
 <footer id="footer">
         <p id="copyright">Copyright &copy; Treasure Hunt 2023</p>
+        <a id="about-button" href="about.html">About</a>
 </footer>
 </body>
 </html>
