Started the javascript side of the TH by renaming some files and creating a new page for the user to enter their name

--- a/src/session.html
+++ b/src/session.html
@@ -12,11 +12,13 @@
     <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
 </header>
 
-<div id="message"></div>
+<div id="message">Proceed with the first question!</div>
 
-<div id="score"></div>
+<b>Score: </b>
+<p id="score">0</p>
 
-<div id="completedQuestions"></div>
+<p>Number of Questions: <div id="numOfQuestions"></div>
+<p>Number of Completed Questions: <div id="completedQuestions"></div>
 
 <div id="question"></div>
 
