--- a/src/session.html
+++ b/src/session.html
@@ -10,6 +10,8 @@
 <body id="sessionBody" onload="getQuestions()">
 <header>
     <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
+    <a href="app.html" id="back"><b>BACK</b></a>
+    <a href="session.html" id="reload"><b>RELOAD</b></a>
 </header>
 
 <!-- Score Display-->
@@ -32,8 +34,8 @@
 
 <div id="questionTypes" class="center">
 <div id="boolean">
-    <input class="boolAns" name="bool" type="button" value="true" onclick="answerQuestion(true)">
-    <input class="boolAns" name="bool" type="button" value="false" onclick="answerQuestion(false)">
+    <input class="boolAns submit" name="bool" type="button" value="true" onclick="answerQuestion(true)">
+    <input class="boolAns submit" name="bool" type="button" value="false" onclick="answerQuestion(false)">
 </div>
 
 <div id="integer">
@@ -51,10 +53,10 @@
 </div>
 
 <div id="MCQ">
-    <input class="abcdAns" name="abcd" type="button" value="A" onclick="answerQuestion('A')">
-    <input class="abcdAns" name="abcd" type="button" value="B" onclick="answerQuestion('B')">
-    <input class="abcdAns" name="abcd" type="button" value="C" onclick="answerQuestion('C')">
-    <input class="abcdAns" name="abcd" type="button" value="D" onclick="answerQuestion('D')">
+    <input class="abcdAns submit" name="abcd" type="button" value="A" onclick="answerQuestion('A')">
+    <input class="abcdAns submit" name="abcd" type="button" value="B" onclick="answerQuestion('B')">
+    <input class="abcdAns submit" name="abcd" type="button" value="C" onclick="answerQuestion('C')">
+    <input class="abcdAns submit" name="abcd" type="button" value="D" onclick="answerQuestion('D')">
 </div>
 
 <div id="text">
