Started the javascript side of the TH by renaming some files and creating a new page for the user to enter their name

--- a/src/app.html
+++ b/src/app.html
@@ -13,11 +13,13 @@
     <a href="name.html" id="back"><b>BACK</b></a>
     <a href="app.html" id="reload"><b>RELOAD</b></a>
 </header>
+<div id="tutorial">
 <h1>Available Treasure Hunts:</h1>
 <h3>Chose a treasure hunt and start! In a treasure hunt you will need to answer questions to rack up points!
     Do not worry about the difficulty. Some questions will have hints and some will be skippable as well, but you will
     lose points if you skip. Keep also in mind that you will have a limited amount of time to complete the Hunt. At the end,
     you will be ranked against other teams, so aim for a high score! Now, Onwards, to Victory!</h3>
+</div>
 <ul id="errorList"></ul>
 <ul id="challengeList"></ul>
 <script src="TH-script.js"></script>
