--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -11,6 +11,14 @@
     <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
 </header>
 
+<table id="leaderboardTable">
+    <tr>
+        <th>Player</th>
+        <th>Score</th>
+        <th>Time</th>
+    </tr>
+</table>
+
 <script src="TH-script.js"></script>
 </body>
 </html>
