Finished the javascript for the TH. Comments are missing.

--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -10,14 +10,17 @@
 <header>
     <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
 </header>
-
-<table id="leaderboardTable">
+<div id="leaderboardDiv">
+<h1>TH Leaderboard</h1>
+<table id="leaderboardTable" class="center">
     <tr>
         <th>Player</th>
         <th>Score</th>
         <th>Time</th>
     </tr>
 </table>
+</div>
+
 
 <script src="TH-script.js"></script>
 </body>
