Figuring out this testing process from the testing links provided

--- a/src/session.html
+++ b/src/session.html
@@ -28,7 +28,7 @@
 <div id="completedQuestions" class="questionsNum" style="text-align: right; width: 80px"></div>
 <div class="questionsNum" style="width: 4px; font-weight: bold;">Questions: </div>
 </div>
-
+//create a testing page with the use of javascript for unit testing and UI testing for this html page
 <div id="message" class="center"></div>
 
 <div id="question" class="center"></div>
