--- a/src/session.html
+++ b/src/session.html
@@ -33,6 +33,8 @@
 
 <div id="question" class="center"></div>
 
+<video id="preview"></video>
+
 <div id="questionTypes" class="center">
 <div id="boolean">
     <input class="boolAns submit" name="bool" type="button" value="true" onclick="answerQuestion(true)">
@@ -69,6 +71,8 @@
 </div>
 
 <div id="skipButton" class="center" onclick="skipQuestion()">Skip</div>
+
+<div id="hint" class="center"></div>
 
 <script src="TH-script.js"></script>
 </body>
