--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>About Page</title>
@@ -16,6 +16,15 @@
     <p class="Names">NDuka Batholomew</p>
     <img class="Logo" src="08_02_2023%2021_04_38.jpg" width="100" height="100">
 </footer>
+
+<div id = "Contribution">
+<h1>Things We Contributed to:</h1>
+<p>Loizos Gaitanou: JavaScript, leaderboard page, questions selection page, name page and session page</p>
+<p>Theodoulos Kappellos: Most of CSS on all pages, created the about page and did the User acceptance testing </p>
+<p>Batholomew Nduka: Some CSS the Unit Testings and the index page</p>
+</div>
+
+
 
 </body>
 </html>
