--- a/about.html
+++ b/about.html
@@ -9,22 +9,19 @@
 <a class="twitter-timeline" href="https://twitter.com/treasure_ads?ref_src=twsrc%5Etfw">Tweets by treasure_ads</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
-<footer>
-    <h1 id="Names">Names of the makers</h1>
+<footer><div id="Names1"><h1 id="Names">Names of the makers</h1>
     <p class="Names">Theodoulos Kappellos</p>
     <p class="Names">Loizos Gaitanou</p>
     <p class="Names">NDuka Batholomew</p>
-    <img class="Logo" src="08_02_2023%2021_04_38.jpg" width="100" height="100">
+    <img class="Logo" src="08_02_2023%2021_04_38.jpg" width="100" height="100"></div>
+
+    <div id = "Contribution">
+        <h1>Things We Contributed to:</h1>
+        <p>Loizos Gaitanou: JavaScript, leaderboard page, questions selection page, name page and session page</p>
+        <p>Theodoulos Kappellos: Most of CSS on all pages, created the about page and did the User acceptance testing </p>
+        <p>Batholomew Nduka: Some CSS the Unit Testings and the index page</p>
+    </div>
 </footer>
-
-<div id = "Contribution">
-<h1>Things We Contributed to:</h1>
-<p>Loizos Gaitanou: JavaScript, leaderboard page, questions selection page, name page and session page</p>
-<p>Theodoulos Kappellos: Most of CSS on all pages, created the about page and did the User acceptance testing </p>
-<p>Batholomew Nduka: Some CSS the Unit Testings and the index page</p>
-</div>
-
-
 
 </body>
 </html>
