--- a/about.html
+++ b/about.html
@@ -18,6 +18,7 @@
     <p class="Names">Theodoulos Kappellos</p>
     <p class="Names">Loizos Gaitanou</p>
     <p class="Names">NDuka Batholomew</p>
+    </div>
 
     <div id = "Contribution">
         <h1>Things We Contributed to:</h1>
