--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<header id="header">
+<header id="headerr">
         <img id="logo" src="08_02_2023%2021_04_38.jpg" alt="Treasure Hunt Team 6 Logo" width="99" height="99">
         <h1 id="title">Treasure Hunt</h1>
         <p>Project Treasure Hunt is a mobile game app that allows users to participate in a virtual treasure hunt. The app will present users with a series of questions, and the goal of the game is to answer each
