--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-<header>
+<header  id="black-background">
     <img src="src/Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
     <a href="index.html" id="back"><b>BACK</b></a>
     <a href="about.html" id="reload"><b>RELOAD</b></a>
@@ -26,6 +26,7 @@
         <p>Theodoulos Kappellos: Most of CSS on all pages, created the about page and did the User acceptance testing </p>
         <p>Batholomew Nduka: Some CSS the Unit Testings and the index page</p>
     </div>
+
 </footer>
 
 </body>
