--- a/about.html
+++ b/about.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/html">
+
 <head>
     <meta charset="UTF-8">
     <title>About Page</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
+
 <body>
+
+<!--Buttons thar refresh and reload about page-->
 <header  id="black-background">
     <img src="src/Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
     <a href="index.html" id="back"><b>BACK</b></a>
     <a href="about.html" id="reload"><b>RELOAD</b></a>
 </header>
+
 <a class="twitter-timeline" href="https://twitter.com/treasure_ads?ref_src=twsrc%5Etfw">Tweets by treasure_ads</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
