--- a/about.html
+++ b/about.html
@@ -16,14 +16,17 @@
     <a href="about.html" id="reload"><b>RELOAD</b></a>
 </header>
 
+<!--Live Twitter page -->
 <a class="twitter-timeline" href="https://twitter.com/treasure_ads?ref_src=twsrc%5Etfw">Tweets by treasure_ads</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
 
-<footer><div id="Names1"><h1 id="Names">Names of the makers</h1>
+<footer>
+    <div id="Names1"><h1 id="Names">Names of the makers</h1>
     <p class="Names">Theodoulos Kappellos</p>
     <p class="Names">Loizos Gaitanou</p>
     <p class="Names">NDuka Batholomew</p>
     </div>
+
 
     <div id = "Contribution">
         <h1>Things We Contributed to:</h1>
@@ -31,6 +34,7 @@
         <p>Theodoulos Kappellos: Most of CSS on all pages, created the about page and did the User acceptance testing </p>
         <p>Batholomew Nduka: Some CSS the Unit Testings and the index page</p>
     </div>
+
 
 </footer>
 
