Fixing some aspects of the js

--- a/src/session.html
+++ b/src/session.html
@@ -14,7 +14,7 @@
 
     <a href="app.html" id="back"><b>BACK</b></a>
     <a href="session.html" id="reload"><b>RELOAD</b></a>
-    <b id="QRcode" onclick="if (cameraBox.hidden) cameraBox.hidden = false; else cameraBox.hidden = true;">QR CODE</b>
+    <b id="QRcode" onclick="cameraBox.hidden=!cameraBox.hidden;">QR CODE</b>
 </header>
 
 <!-- Score Display-->
