--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>About Page</title>
+    <title>About</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 
