Fixing some aspects of the js

--- a/src/session.html
+++ b/src/session.html
@@ -18,17 +18,21 @@
 </header>
 
 <!-- Score Display-->
-<div id="sDisplay">
-<p style="font-weight: bold;" class="score">Score: </p>
-<p id="score" class="score" style="text-align: left; width: 15px;">0</p>
-</div>
+<div id="detailsDisplay">
+    <!-- style="font-weight: bold;" -->
+    <p  class="score">Score: </p>
+    <!-- style="text-align: left; width: 15px;" -->
+    <p id="score" class="score" >0</p>
+
 
 <!-- Number of Questions and remaining Questions Display-->
-<div id="qDisplay">
-<div id="numOfQuestions" class="questionsNum"></div>
-<div class="questionsNum" style="width: 4px">/</div>
-<div id="completedQuestions" class="questionsNum" style="text-align: right; width: 80px"></div>
-<div class="questionsNum" style="width: 4px; font-weight: bold;">Questions: </div>
+
+    <p id="numOfQuestions" class="questionsNum"></p>
+    <p class="questionsNum">/</p>
+    <!-- style="text-align: right;" -->
+    <p id="completedQuestions" class="questionsNum" ></p>
+    <!-- style="width: 40px; font-weight: bold;" -->
+    <p class="questionsNum" >Questions: </p>
 </div>
 
 <div id="cameraBox">
