--- a/src/name.html
+++ b/src/name.html
@@ -9,6 +9,12 @@
 </head>
 
 <body>
+
+<header>
+    <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
+    <a href="index.html" id="back"><b>BACK</b></a>
+</header>
+
 <div id="enterName">
 <h1 id="title">I am known as...</h1>
     <p id="explanation">(Enter your name)</p>
