--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <p id="description">Join us for an exciting adventure as we search for hidden treasures!</p><br><br>
 
-<a id="Start" href="src/name.html">START THE HUNT</a>   <!--Button for the start of the treasure hunt-->
+<a id="Start" onclick="resumeHuntIndex()">START THE HUNT</a>   <!--Button for the start of the treasure hunt-->
 </main>
 
 <!--In footer there is a button that takes you to the about page -->
@@ -31,6 +31,7 @@
         <a id="about-button" href="about.html">About</a>
 </footer>
 
+<script src="src/TH-script.js"></script>
 </body>
 
 </html>
