--- a/src/app.html
+++ b/src/app.html
@@ -13,7 +13,7 @@
 <header>
     <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
     <div id="loader"></div>
-    <a href="name.html" id="back"><b>BACK</b></a>
+    <a href="index.html" id="back"><b>BACK</b></a>
     <a href="app.html" id="reload"><b>RELOAD</b></a>
 </header>
 
