--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -10,7 +10,7 @@
 <header>
     <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
     <div id="loader"></div>
-    <a href="app.html" id="back"><b>BACK</b></a>
+    <a href="index.html" id="back"><b>BACK</b></a>
     <a href="leaderboard.html" id="reload"><b>RELOAD</b></a>
 </header>
 <div id="leaderboardDiv">
