--- a/src/name.html
+++ b/src/name.html
@@ -10,10 +10,9 @@
 
 <body>
 
-<header>
-    <img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
-    <a href="index.html" id="back"><b>BACK</b></a>
-</header>
+
+<img src="Team6Logo.jpg" alt="Treasure Hunt Team 6 Logo" width="100" height="100">
+<a href="index.html" id="back" style="color: black; font-size: x-large"><b>BACK</b></a>
 
 <div id="enterName">
 <h1 id="title">I am known as...</h1>
