Fixing some aspects of the js

--- a/src/leaderboard.html
+++ b/src/leaderboard.html
@@ -17,6 +17,7 @@
 <h1>TH Leaderboard</h1>
 <table id="leaderboardTable" class="center">
     <tr>
+        <th>Rank</th>
         <th>Player</th>
         <th>Score</th>
         <th>Time</th>
