--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 <footer>
     <div id="Names1"><h1 id="Names">Names of the makers</h1>
     <p class="Names">Theodoulos Kappellos</p>
-    <p class="Names">Loizos Gaitanou</p>
+    <p class="Names">loizos gaitanou --</p>
     <p class="Names">NDuka Batholomew</p>
     </div>
 
