--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
     <div id="Names1"><h1 id="Names">Names of the makers</h1>
     <p class="Names">Theodoulos Kappellos</p>
     <p class="Names">loizos gaitanou</p>
-    <p class="Names">NDuka Batholomew</p>
+    <p class="Names">NDuka Batholomew--</p>
     </div>
 
 
