Added acceptance testing

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
 
 <!--In footer there is a button that takes you to the about page -->
 <footer id="footer">
-    <a id="Testing Page" href="AcceptanceTesting">Testing Page</a>
+    <a id="Testing Page" href="AcceptanceTesting.htm">Testing Page</a>
     <a id="about-button" href="about.html">About</a>
 </footer>
 
