--- a/src/test.html
+++ b/src/test.html
@@ -12,8 +12,9 @@
     <a href="test.html" id="reload"><b>RELOAD</b></a>
 </header>
 <h1 class="center">Testing Page for The Team Six Treasure Hunt</h1>
-
+<p class="center">User Acceptance testing and usability assessment: <button onclick="window.location.href='AcceptanceTesting.htm'">Go</button></p>
 <div class="center">
+    <h2><u>Unit Testing</u></h2>
 <h3>Get Challenges Testing</h3>
 <form>
     <input class="submit" type="button" value="Test" onclick="getTestChallenges()">
