Final Modifications to the Testing page

--- a/src/test.html
+++ b/src/test.html
@@ -48,7 +48,7 @@
 </div>
 
 <div class="center">
-    <h3>Start Get Question Testing</h3>
+    <h3>Start Get Answer Testing</h3>
     <form>
         <input class="submit" type="button" value="Test" onclick="getTestAnswer()">
     </form>
@@ -78,7 +78,14 @@
     <p id="LeaderboardSorted"></p>
     <p id="LeaderboardHasPrize"></p>
     <p id="LeaderboardNumOfPeople"></p>
-    <ul id="testResultLeaderboard"></ul>
+    <table id="LeaderboardTestTable" class="center">
+        <tr>
+            <th>Rank</th>
+            <th>Player</th>
+            <th>Score</th>
+            <th>Time</th>
+        </tr>
+    </table>
     <ul id="erorListLeaderboard"></ul>
 </div>
 
